# saga

./: CONTRIBUTING.md  Cargo.toml  README.md  seed-mock-data.sh
src/: config.rs  lib.rs  main.rs
src/app/: handler.rs  message.rs  mod.rs  state.rs  update.rs
src/cli/: commands.rs  mod.rs
src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src/db/queries/: clients.rs  entries.rs  mod.rs  projects.rs  rates.rs  reports.rs  tags.rs
src/export/: csv.rs  invoice.rs  mod.rs  pdf.rs
src/models/: client.rs  entry.rs  mod.rs  project.rs  rate.rs  report.rs  tag.rs
src/ui/: layout.rs  mod.rs  theme.rs  tui.rs
src/ui/components/: confirm_dialog.rs  date_picker.rs  duration_input.rs  entry_form.rs  help_overlay.rs  mod.rs  pie_chart.rs  project_picker.rs  status_bar.rs  tab_bar.rs  text_input.rs  timer_widget.rs
src/ui/screens/: clients.rs  dashboard.rs  entries.rs  mod.rs  projects.rs  reports.rs  settings.rs  timer.rs
