[package]
name = "saga-time"
version = "0.1.0"
edition = "2021"
description = "A local-first time tracking application with CLI and TUI"
license = "MIT"
repository = "https://github.com/squirrelsoft-dev/saga"
readme = "README.md"
keywords = ["time-tracking", "cli", "tui", "invoicing"]
categories = ["command-line-utilities"]

[[bin]]
name = "saga"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CSV export
csv = "1.3"

# PDF generation
genpdf = "0.2"

# Config
confy = "0.6"

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# IDs
uuid = { version = "1.0", features = ["v4"] }

# Paths
directories = "6.0"

# CLI colors
colored = "3.0"

# Durations
humantime = "2.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
